--- a/support.html
+++ b/support.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Support - Windtalkerz</title>
+  <title>Support - BlackPearls</title>
 </head>
 <body>
   <h1>Support</h1>
   <p>Vielen Dank, dass Sie unsere App nutzen.</p>
   <p>Bei Fragen oder Problemen erreichen Sie uns per E-Mail: 
-     <a href="mailto:support@windtalkerz.com">support@windtalkerz.com</a></p>
+     <a href="mailto:support@blackPearls.com">support@blackPearls.com</a></p>
 </body>
 </html>
